[package]
name = "struct-arithmetic"
description = "Provides a Trait to derive basic arithmetic operations for your structs."
repository = "https://github.com/hubble-markets/struct-arithmetic-macros"
license = "MIT"
version = "0.3.0"
edition = "2018"

[features]

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc_macro = true
